--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 lspace-3">
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-    <ul class="navbar-nav" style="width:80%; margin:0 auto;">
-      <!--Home-->
+    <ul class="navbar-nav" style="width:90%; margin:0 auto;">
+      <!--!Home-->
       <li class="nav-item">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/' routerLinkActive="active">
           <h1 class="s2bold">Home</h1>
@@ -10,64 +10,64 @@
           <h1 class="s2bold">Home</h1>
         </a>
       </li>
-      <span class="navspace"></span>
+      <!-- <span class="navspace"></span> -->
+      <!-- !Products -->
+      <li class="nav-item dropdown pl-lg-3" *ngFor="let typeItem of allTypes, index as i">
+          <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink{{i}}" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <h1 class="s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]" (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">{{typeItem.typeName}}</h1>
+          </div>
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allTypes">
 
-            <li class="nav-item dropdown" *ngFor="let typeItem of allTypes, index as i">
-                <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink{{i}}" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <h1 class="s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]" (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">{{typeItem.typeName}}</h1>
-                </div>
-                <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allTypes">
-        
-                  <!-- !large screen dropdown -->
-                  <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]"
-                  (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
-                    <h1>All {{typeItem.typeName}}s</h1>
-                  </a>
-                  <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block"
-                  href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}'
-                  (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
-                    All {{typeItem.typeName}}s
-                  </a>
-                  <div *ngIf="isBrowser==true">
-                    <a class="dropdown-item d-none d-md-block s2bold" *ngFor="let category of typeItem.productCategory"
-                    [routerLink]="[ '/products', typeItem.prodTypeId, category.categoryId ]"
-                    (click)="updateCategoryStatus(category.categoryName)">
-                      <h1>{{category.categoryName}}</h1>
-                    </a>
-                  </div>
-                  <div *ngIf="isBrowser==false">
-                    <a class="dropdown-item d-none d-md-block" *ngFor="let category of typeItem.productCategory"
-                    href = 'http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}/{{category.categoryId}}'
-                    (click)="updateCategoryStatus(category.categoryName)">
-                      {{category.categoryName}}
-                    </a>
-                  </div>
-        
-                  <!-- !mobile dropdown -->
-                  <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="['/products', typeItem.prodTypeId, 0]"
-                    (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
-                      <h1>All {{typeItem.typeName}}s</h1>
-                    </a>
-                    <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}'
-                    (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
-                      All {{typeItem.typeName}}s
-                    </a>
-                  </a>
-                  <a class="dropdown-item d-block d-md-none s2bold" *ngFor="let category of typeItem.productCategory" data-toggle="collapse"
-                    data-target=".navbar-collapse">
-                    <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="[ '/products', typeItem.prodTypeId, category.categoryId ]"
-                    (click)="updateCategoryStatus(category.categoryName)">
-                      <h1>{{category.categoryName}}</h1>
-                    </a>
-                    <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}/{{category.categoryId}}'
-                    (click)="updateCategoryStatus(category.categoryName)">
-                      {{category.categoryName}}
-                    </a>
-                  </a>
-                </div>
-              </li>
+            <!-- !large screen dropdown -->
+            <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]"
+            (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
+              <h1>All {{typeItem.typeName}}s</h1>
+            </a>
+            <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block"
+            href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}'
+            (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
+              All {{typeItem.typeName}}s
+            </a>
+            <div *ngIf="isBrowser==true">
+              <a class="dropdown-item d-none d-md-block s2bold" *ngFor="let category of typeItem.productCategory"
+              [routerLink]="[ '/products', typeItem.prodTypeId, category.categoryId ]"
+              (click)="updateCategoryStatus(category.categoryName)">
+                <h1>{{category.categoryName}}</h1>
+              </a>
+            </div>
+            <div *ngIf="isBrowser==false">
+              <a class="dropdown-item d-none d-md-block" *ngFor="let category of typeItem.productCategory"
+              href = 'http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}/{{category.categoryId}}'
+              (click)="updateCategoryStatus(category.categoryName)">
+                {{category.categoryName}}
+              </a>
+            </div>
+
+            <!-- !mobile dropdown -->
+            <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
+              <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="['/products', typeItem.prodTypeId, 0]"
+              (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
+                <h1>All {{typeItem.typeName}}s</h1>
+              </a>
+              <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}'
+              (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
+                All {{typeItem.typeName}}s
+              </a>
+            </a>
+            <a class="dropdown-item d-block d-md-none s2bold" *ngFor="let category of typeItem.productCategory" data-toggle="collapse"
+              data-target=".navbar-collapse">
+              <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="[ '/products', typeItem.prodTypeId, category.categoryId ]"
+              (click)="updateCategoryStatus(category.categoryName)">
+                <h1>{{category.categoryName}}</h1>
+              </a>
+              <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/{{typeItem.prodTypeId}}/{{category.categoryId}}'
+              (click)="updateCategoryStatus(category.categoryName)">
+                {{category.categoryName}}
+              </a>
+            </a>
+          </div>
+        </li>
         
 
       <!--!Hire dropdown-->
@@ -103,8 +103,8 @@
         </div>
       </li> -->
 
-      <span class="navspace"></span>
-      <!--Party services-->
+      <!-- <span class="navspace"></span> -->
+      <!--!Party services-->
       <li class="nav-item">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/services' routerLinkActive="active">
           <h1 class="s2bold">Party Services</h1>
@@ -113,12 +113,11 @@
           <h1 class="s2bold">Party Services</h1>
         </a>
       </li>
-      <span class="navspace"></span>
-      
+      <!-- <span class="navspace"></span> -->
     </ul>
   </div>
   
-  <!-- website icon -->
+  <!-- !website icon -->
   <div class="mx-auto order-0">
     <a *ngIf="isBrowser==true" class="nav-link p-0 p-md-1" routerLink='/' routerLinkActive="active">
       <img class="d-none d-lg-block" src="../../../../assets/images/Asset1-4x-big.png" style="zoom:0.5;height:9.4rem;" />
@@ -133,16 +132,17 @@
     </div>
     
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav" style="width:80%;margin:0 auto;">
-          <!--Party Packages-->
-          <li class="nav-item">
-            <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">
-              <h1 class="s2bold">Party Packages</h1>
-            </a>
-            <a *ngIf="isBrowser==false" class="nav-link s2bold" href='http://luxedreameventhire.co.nz/packages'>
-              <h1 class="s2bold">Party Packages</h1>
-            </a>
-          </li>
+      <ul class="navbar-nav" style="width:90%;margin:0 auto;">
+      <!-- !Party Packages-->
+        <li class="nav-item">
+          <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">
+            <h1 class="s2bold">Party Packages</h1>
+          </a>
+          <a *ngIf="isBrowser==false" class="nav-link s2bold" href='http://luxedreameventhire.co.nz/packages'>
+            <h1 class="s2bold">Party Packages</h1>
+          </a>
+        </li>
+        <span class="navspace"></span>
       <!--!Gallery-->
       <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown"
@@ -175,7 +175,7 @@
 
 
       <span class="navspace"></span>
-      <!--About us-->
+      <!--!About us-->
       <li class="nav-item">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/aboutUs' routerLinkActive="active">
           <h1 class="s2bold">About us</h1>
@@ -185,7 +185,7 @@
         </a>
       </li>
       <span class="navspace"></span>
-      <!--FAQ-->
+      <!--!FAQ-->
       <li class="nav-item">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/faq' routerLinkActive="active">
           <h1 class="s2bold">FAQ</h1>
@@ -195,7 +195,7 @@
         </a>
       </li>
       <span class="navspace"></span>
-      <!--/Contact us-->
+      <!--!Contact us-->
       <li class="nav-item">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active">
           <h1 class="s2bold">Contact us</h1>
@@ -204,8 +204,9 @@
           <h1 class="s2bold">Contact us</h1>
         </a>
       </li>
-      <!--Shooping Cart-->
-      <li class="nav-item pl-md-4">
+      <span class="navspace"></span>
+      <!--!Shooping Cart-->
+      <li class="nav-item pl-md-1">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/checkout' routerLinkActive="active">
           <h1 class="s2bold">
               <i class="fas fa-shopping-cart" title="View Shopping Cart"></i>
