--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -8,7 +8,7 @@
         </a>
       </li>
       <li class="nav-item" *ngFor="let item of displayedProductTypes, index as i" (click)="updatePanel(item.typeName)">
-        <a class="nav-link" id="2" [routerLink]="[ '/admin/adminProducts/', item.prodTypeId]">
+        <a class="nav-link" id="2" [routerLink]="[ '/admin/adminProducts/', item.prodTypeId]" *ngIf="navBarIconArray">
           <i class={{navBarIconArray[i].Icon}}></i>
           {{item.typeName}}
         </a>
