--- a/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,22 +2,25 @@
     <h1>Welcome to Dashboard</h1><br>
     <hr><br>
     <!-- Edit productCategory -->
-    <h2>Edit Categories </h2>
-    <div class="row">
-      <div class="col-6">
-        <div class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Specify the product type
+    
+    <div class="row justify-content-center">
+      <h2 class="col-3">Edit Categories </h2>
+      <div class="dropdown col-3">
+        <span class="btn btn-secondary dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Specify the product type
+        </span>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" *ngFor="let type of displayedTypeData" (click)="loadCategory(type.prodTypeId)">
+            {{type.typeName}}
           </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" *ngFor="let type of displayedTypeData" (click)="loadCategory(type.prodTypeId)">
-              {{type.typeName}}
-            </a>
-          </div>
         </div>
       </div>
-
+    </div>
+    
+    <br><br>
+    <div class="row justify-content-center">
       <div class="col-6" *ngIf="selectedType">
+        <h3>{{selectedType['0'].typeName}}</h3>
           <form [formGroup]="categoryForm">
               <div formArrayName="categoryItems">
                   <div *ngFor="let cate of categoryForm.controls.categoryItems.controls, index as i">
