--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -61,6 +61,12 @@
           Carts
         </a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" id="7" routerLink='/admin/adminImages'>
+            <i class="far fa-images"></i>
+            Images
+          </a>
+        </li>
     </ul>
   </div>
 </nav>
