--- a/src/app/fcomponents/pages/homepage/homepage.component.css
+++ b/src/app/fcomponents/pages/homepage/homepage.component.css
@@ -5,10 +5,7 @@ a{
     height: auto;
     max-width: 100%;
 }
-/* i{
-    color:#b2823f;
-    font-size:70px;
-} */
+
 ul li{
     margin-top:15px
 }
@@ -87,4 +84,7 @@ ul li{
     color:#b2823f;
     font-size:70px;
     opacity: 0.5;
+}
+.specialProductTitle{
+    cursor: pointer;
 }
