--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -51,7 +51,7 @@
                   <div class="h490" *ngIf="spe.productMedia[0]">
                       <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
                     </div>
-                  <div class="s1">{{spe.title}}</div>
+                  <div class="s1 specialProductTitle" [routerLink]="[ '/product/', spe.prodId]">{{spe.title}}</div>
                   <div>
                     <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount == null">Price: ${{spe.price}}</span>
                     <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount >= 0">Price: ${{spe.price - spe.discount}}</span>
