--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -2,32 +2,25 @@
   <div class="row" #imgContainer>
     <div class="col-12 p-0">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+        <!-- <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
+        </ol> -->
         <!-- <div class="carousel-inner"> -->
         <div class="carousel-inner">
-          <div class="carousel-item active homaimg">
-            <img src="../../../../assets/images/homep1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item homaimg">
-            <img src="../../../../assets/images/homep2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item homaimg">
-            <img src="../../../../assets/images/homep3.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item homaimg">
-            <img src="../../../../assets/images/homep4.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item homaimg" [ngClass]="{'active': i === 0}" *ngFor="let image of displayedCarouselImages, index as i">
+            <img src="{{baseImageLink}}{{image.imageUrl}}" class="d-block w-100" alt="...">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"
+          *ngIf="displayedCarouselImages.length > 1">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"
+          *ngIf="displayedCarouselImages.length > 1">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
