--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -22,6 +22,9 @@
           Add
         </button>
       </div>
+      <div class="col">
+        <input type="text" id="productSearch" placeholder="search products here" [formControl]="searchField">
+      </div>
     </div>
     <table class="table">
       <thead>
