--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -4,26 +4,17 @@
 
 <div>
     <div class="row mt-3">
-      <!-- <div class="col-1" *ngIf="productTypeId === '1'">
-        <h2>Hires</h2>
-      </div>
-      <div class="col-2" *ngIf="productTypeId === '2'">
-        <h2>Services</h2>
-      </div>
-      <div class="col-2" *ngIf="productTypeId === '3'">
-        <h2>Packages</h2>
-      </div> -->
-      <div class="col pr-5">
+      <div class="ml-3 mr-5">
         <h2>{{productTitle}}</h2>
       </div>
       <div class="pt-2 col">
-        <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createProduct()">
+        <button type="button" style="border-radius: 5px;" title="Add" (click)="createProduct()">
           <i class="fas fa-plus"></i>
-          Add
+          <span>Add</span>
         </button>
       </div>
-      <div class="col">
-        <input type="text" id="productSearch" placeholder="search products here" [formControl]="searchField">
+      <div class="pt-2 col">
+        <input type="text" id="productSearch" placeholder="search the name of products here" [formControl]="searchField">
       </div>
     </div>
     <table class="table">
